<resources>
    <string name="app_name">生徒サーバー</string>
    <string name="ip">101.143.4.126</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">ホーム</string>
    <string name="serverinfo">サーバー情報</string>
    <string name="we">同盟サーバー</string>
    <string name="rule">利用規約</string>
    <string name="developers">開発者向け</string>
    <string name="lnk">外部リンク</string>
    <string name="homepage">ホームページ</string>
    <string name="share">Lobi</string>
    <string name="google_space">Google スペース</string>
    <string name="google">Google-plus</string>
    <string name="shere">共有</string>
    <string name="line">公式Lineアカウント</string>
    <string name="menu_refresh">更新</string>
    <string name="server">サーバー接続</string>
    <string name="feedback">フィードバック</string>
    <string name="app">アプリを更新</string>
    <string name="app_bata">ベータ版をインストール</string>
    <string name="action_settings">設定</string>
    <string name="account_label">生徒アカウント</string>
    <string name="more">もっと読む</string>
    <string-array name="spice">
        <item>takesi より\nこのアプリはまだ完成はしていないので端末によって表示がおかしくなることもあるので。その時は、Lobiまたは半公式Google plusに投稿してください。</item>
        <item>管理メンバーより\n荒らされていたところを修復しました。08/22/22:30</item>
        <item>管理メンバーより\n3つの道路が荒らされていたところを修復しました。08/21/21:45</item>
        <item>管理メンバーより\n3つの道路が荒らされていたので修復しました。08/18/17:45</item>
    </string-array>
    <string-array name="dummy">
        <item>先ほど、生徒サーバーLobiグループの人数が100名を突破しました！\nこれを記念して、今週の日曜日に記念イベントを開く予定です！</item>
        <item>生徒サーバーが日本マインクラフトサーバー連盟を設立しました！興味のある方はぜひとも入ってください。\n鯖主の方へ\n詳しくはtakesiのこちゃでお気軽にご相談ください。</item>
        <item>[生徒鯖の全てがここにある！]\n
(2016/11/4更新)\n\n
[生徒鯖に行こう！]\n
ここを参考にしていざ出発だ！\n\n
[ステータス]\n
設立日時: 2016年11月3日\n
IPアドレス: 101.143.28.97\n
ポート番号: 19132\n
設立者: +たけしかいちょー​\n​​​​​​​​​​​​
(サブアカウント +takesi たけしかいちょー)\n\n
[生徒鯖の権限人]\n
+takesi_0611\n
siitake\n
gtaharuya2\n
lemonjuice\n
sinigami\n
getup(非常勤)\n\n​​​​
[生徒鯖の管理者]\n
紹介までもう少し待ってね\n
君の目の前には楽しいサーバー生活が待っている！\n
これからも生徒鯖をよろしくね！\n
------\n
生徒鯖管理人一同\n
#生徒鯖</item>
        <item>1/15 22:00に正式OPと建築生徒、仮OP権限生徒を発表しました</item>
        <item>OK Googleがin時に挨拶をするようになりました！</item>
        <item>その他</item>
        ﻿
    </string-array>
    <!-- Strings related to Settings -->

    <string name="pref_header_general">基本設定</string>

    <string name="pref_title_social_recommendations">バックアップ</string>
    <string name="pref_description_social_recommendations">万が一のことを考えプレイ履歴をバックアップ</string>

    <string name="pref_title_display_name">ユーザー名</string>
    <string name="pref_default_display_name">user name</string>

    <string name="pref_title_add_friends_to_messages">あなたの位置付け</string>
    <string-array name="pref_example_list_titles">
        <item>オーナー・開発者</item>
        <item>サーバーメンバー</item>
        <item>指定なし</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_theme">テーマの編集</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">データ &amp; 更新</string>

    <string name="pref_title_sync_frequency">更新間隔</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15分ごと</item>
        <item>30分ごと</item>
        <item>1時間ごと</item>
        <item>3時間ごと</item>
        <item>6時間ごと</item>
        <item>更新しない</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">この端末内のアカウントを表示</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">通知を有効にする</string>

    <string name="pref_title_ringtone">着信音の指定</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">着信音を有効にする</string>
    <string name="title_activity_settings">設定</string>

    <string name="title_activity_earth">Student-Earth</string>
    <string name="dummy_button">閉じる</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_activity_login">管理者ログイン</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_sign_in_short">ログイン</string>
    <string name="error_invalid_email">E-mailアドレスが不正です。</string>
    <string name="error_invalid_password">パスワードが短すぎます。</string>
    <string name="error_incorrect_password">パスワードがincorrectです。</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_web">生徒ブラウザー</string>
    <string name="open_directory">Open</string>
    <string name="selected_directory">Selected directory:\ </string>
    <string name="nothing_in_directory">Nothing in the directory</string>
    <string name="primary_volume_description">Internal shared storage</string>
    <string-array name="directories">
        <item>ALARMS</item>
        <item>DCIM</item>
        <item>DOCUMENTS</item>
        <item>DOWNLOADS</item>
        <item>MOVIES</item>
        <item>MUSIC</item>
        <item>NOTIFICATIONS</item>
        <item>PICTURES</item>
        <item>PODCASTS</item>
        <item>RINGTONES</item>
    </string-array>
    <string name="file">生徒ファイルエクスプローラー</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_news">NewsActivity</string>
</resources>
