<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:support="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/server" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback" />
    <item
        android:id="@+id/action_app"
        android:orderInCategory="100"
        android:title="@string/app" />
    <item
        android:id="@+id/action_app_bata"
        android:orderInCategory="100"
        android:title="@string/app_bata" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
